<resources>
    <string name="app_name">Lab1</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>


    <string name="title_activity_login">LoginActivity</string>
    <string name="textView">Login</string>
    <string name="email_hint">email@domain.com</string>
    <string name="textView1">Password</string>
    <string name="password">password</string>

    <string name="loginButton">Log in</string>
    <string name="ButtonText1">Button 1</string>
    <string name="ButtonText2">Back</string>

    <string name="abc">Enable Something</string>
    <string name="image">Image_star</string>

    <string name="dialog_message">Do you want to finish this activity?</string>
    <string name="dialog_title">Exit?</string>
    <string name="ok">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_chat_window">ChatWindow</string>

    <string name="ButtonTextStart">Start Chat</string>
    <string name="sent_button">Send</string>
    <string name="message_textView">new Text</string>
    <string name="image_desc">Call out/in</string>

    <string name="weatherButton">Check weather</string>
    <string name="title_activity_weather_forecast">WeatherForecast</string>

    <string name="temperature"> temperature </string>
    <string name="temperature_min">minimum temperature </string>
    <string name="temperature_max">maximum temperature </string>
    <string name="title_message_list">Messages</string>
    <string name="title_message_detail">Message Detail</string>


</resources>
