<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_weather_forecast"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.yu.lab1.WeatherForecast"
    tools:showIn="@layout/activity_weather_forecast">


    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/ic_action_name_weather"
        android:id="@+id/weather_imageView" />

    <TextView
        android:text="@string/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/temp_textView"
        android:layout_below="@+id/weather_imageView" />

    <TextView
        android:text="@string/temperature_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/temp_min_textView"
        android:layout_below="@+id/temp_textView" />
    <TextView
        android:text="@string/temperature_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/temp_max_textView"
        android:layout_below="@+id/temp_min_textView" />

    <ProgressBar
        style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temp_max_textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="39dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="28dp"
        android:id="@+id/progressBar"
        android:visibility="invisible" />


</RelativeLayout>
